# hermes-eldercare

./: LICENSE  README.md  __init__.py  conftest.py  plugin.yaml  pyproject.toml
hermes_eldercare/: __init__.py  cli.py  constants.py  installer.py  plugin.py  prompts.py  style.py
tests/: test_eldercare_installer.py
