[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-eldercare"
version = "0.1.0"
description = "Weixin-first senior-friendly Hermes plugin and profile installer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
hermes-eldercare = "hermes_eldercare.cli:main"

[project.entry-points."hermes_agent.plugins"]
hermes-eldercare = "hermes_eldercare.plugin"

[tool.setuptools.packages.find]
include = ["hermes_eldercare*"]
