[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-eldercare"
version = "0.1.0"
description = "Weixin-first senior-friendly Hermes plugin and profile installer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
]

[project.scripts]
hermes-eldercare = "hermes_eldercare.cli:main"

[project.entry-points."hermes_agent.plugins"]
hermes-eldercare = "hermes_eldercare.plugin"

[tool.setuptools.packages.find]
include = ["hermes_eldercare*"]

[tool.pytest.ini_options]
# The repo root has an __init__.py used only as the Hermes directory-plugin
# entrypoint (which uses a package-relative import). Without this, pytest treats
# the repo root as a package and imports that __init__.py with no parent package,
# breaking the relative import. importlib mode + an explicit testpaths avoids it.
addopts = "--import-mode=importlib"
testpaths = ["tests"]
